// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The StatusBarView Component Match Snapshot 1`] = `
Array [
  <span
    className="codicon codicon-error"
  />,
  " 10 ",
  <span
    className="codicon codicon-warning"
  />,
  " 20 ",
  <span
    className="codicon codicon-info"
  />,
  " 30",
]
`;

exports[`The StatusBarView Component Match Snapshot with defualt value 1`] = `
Array [
  <span
    className="codicon codicon-error"
  />,
  " 0 ",
  <span
    className="codicon codicon-warning"
  />,
  " 0 ",
  <span
    className="codicon codicon-info"
  />,
  " 0",
]
`;
